Prevent numbers from overflowing if the text is very long

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,9 @@ body {
 
 .operaciones {
     padding: 5px;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow: ellipsis; 
 }
 
 .calculatorButtons {
